--- a/chartv1.html
+++ b/chartv1.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <script src="https://d3js.org/d3.v4.min.js"></script>
-        <script src="http://dimplejs.org/dist/dimple.v2.3.0.min.js"></script>
+        <script src="./dimple.v2.3.0.min.js"></script>
     </head>
     <body>
         
