--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
     </head>
     <body>
         <a href="./chartv1.html">Chart test V1</a>
+        <a href="./chartv2.html">Chart test V2</a>
     </body>
 </html>
