--- a/chartv2.html
+++ b/chartv2.html
@@ -1,1 +1,105 @@
+<html>
+    <head>
+        <script src="http://d3js.org/d3.v4.min.js"></script>
+        <script src="./dimple.v2.3.0.min.js"></script>
+    </head>
+    <body>
+        
+        <p style="width: 1500px; margin: 0 auto; overflow: hidden;"> 
+        勝手に入社のテストを自分で作って動かしてみた結果v1</br>
+        シナリオ組めていないので、データと表によって何かがわかることはないと思います。</br>
+        d3jsとdimplejsを使用しました。</p>
+        
+<div id="chartContainer" style="width: 1500px; margin: 0 auto; overflow: hidden;">
+    <script type="text/javascript">
+        d3.tsv("/data/example_data.tsv", function (data) {
+            drawPieChart(data,500,400);
+            drawVerticalStackBar(data,400,400);
+            drawGroupedPercentStackedAreaChart(data,500, 400);
+            drawCurvyLineChart(data, 1500, 400);
+            darwBubbleChart(data, 600, 600);
+            drawHorizontalStackBar(data, 600, 600);
+        });
 
+function drawPieChart(data,width,hegiht){
+    var svg = dimple.newSvg("#chartContainer", width, hegiht);
+    var myChart = new dimple.chart(svg, data);
+        myChart.setBounds(20, 20, width * 0.8, hegiht * 0.8)
+        myChart.addMeasureAxis("p", "Unit Sales");
+        myChart.addSeries("Owner", dimple.plot.pie);
+        myChart.addLegend(400, 20, 90, 300, "left");
+        myChart.draw();
+}
+
+function drawVerticalStackBar(data,width,hegiht){
+    var svg = dimple.newSvg("#chartContainer", width,hegiht);
+    var myChart = new dimple.chart(svg, data);
+      myChart.setBounds(60, 45, width * 0.8, hegiht * 0.8);
+      myChart.addCategoryAxis("x", ["Price Tier"]);
+      myChart.addMeasureAxis("y", "Unit Sales");
+      myChart.addSeries("Owner", dimple.plot.bar);
+      myChart.addLegend(0, 10, 380, 20, "right");
+      myChart.draw();
+}
+function drawGroupedPercentStackedAreaChart(data,width,hegiht){
+    var svg = dimple.newSvg("#chartContainer", width,hegiht);
+    var d = dimple.filterData(data, "Owner", ["Aperture", "Black Mesa"]);
+    var myChart = new dimple.chart(svg, d);
+      myChart.setBounds(70, 30, width * 0.5, hegiht *0.8);
+      var x = myChart.addCategoryAxis("x", ["Owner", "Month"]);
+      x.addGroupOrderRule("Date");
+      myChart.addPctAxis("y", "Unit Sales");
+      var s = myChart.addSeries("SKU", dimple.plot.area);
+      s.lineWeight = 1;
+      s.barGap = 0.05;
+      myChart.addLegend(320, 20, 100, 300, "left");
+      myChart.draw();
+}
+function drawCurvyLineChart(data,width,hegiht){
+    var svg = dimple.newSvg("#chartContainer",width,hegiht);
+      var myChart = new dimple.chart(svg, data);
+      myChart.setBounds(60, 60, width * 0.8, hegiht * 0.8);
+      var x = myChart.addCategoryAxis("x", "Month");
+      x.addOrderRule("Date");
+      myChart.addMeasureAxis("y", "Unit Sales");
+      var s = myChart.addSeries("Owner", dimple.plot.line);
+      s.interpolation = "cardinal";
+      myChart.addLegend(60, 10, 500, 20, "right");
+      myChart.draw();
+}
+
+function darwBubbleChart(data,width,hegiht){
+    var svg = dimple.newSvg("#chartContainer", width,hegiht);
+    data = dimple.filterData(data, "Month", "Dec-11");
+    var myChart = new dimple.chart(svg, data);
+        myChart.setBounds(40, 60, width * 0.8, hegiht * 0.8);
+        myChart.addMeasureAxis("x", "Unit Sales Monthly Change");
+        myChart.addMeasureAxis("y", "Price Monthly Change");
+        myChart.addMeasureAxis("z", "Operating Profit");
+        myChart.addSeries(["SKU", "Owner"], dimple.plot.bubble);
+        myChart.addLegend(200, 10, 360, 20, "right");
+        myChart.draw();
+}
+function drawHorizontalStackBar(data,width,hegiht){
+    var svg = dimple.newSvg("#chartContainer", width,hegiht);
+    data = dimple.filterData(data, "Month", "Dec-11");
+    var myChart = new dimple.chart(svg, data);
+      myChart.setBounds(80, 60, width * 0.8, hegiht * 0.8);
+      myChart.addMeasureAxis("x", "Unit Sales");
+      myChart.addCategoryAxis("y", ["Pack Type"]);
+      myChart.addSeries("Owner", dimple.plot.bar);
+      myChart.addLegend(60, 10, 510, 20, "right");
+      myChart.draw();
+}
+// function addTitle(svg,text){
+//     svg.append("text")
+//             .attr("transform", "translate(100,0)")
+//             .attr("x", 50)
+//             .attr("y", 50)
+//             .attr("font-size", "24px")
+//             .text(text);
+// }
+    </script>
+</div>
+</body>
+</html>
